PCI8154/Library/Include/pci_8154.h

I16 FNTYPE _8154_db51_HSL_M_start_tr_arc_xy(I16 card_ID, I16 M_No, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_start_ta_arc_xy(I16 card_ID, I16 M_No, F64 Cx, F64 Cy, F64 Ex, F64 Ey, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_start_sr_arc_xy(I16 card_ID, I16 M_No, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_db51_HSL_M_start_sa_arc_xy(I16 card_ID, I16 M_No, F64 Cx, F64 Cy, F64 Ex, F64 Ey, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_db51_HSL_M_start_tr_arc_zu(I16 card_ID, I16 M_No, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_start_ta_arc_zu(I16 card_ID, I16 M_No, F64 Cx, F64 Cy, F64 Ex, F64 Ey, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_start_sr_arc_zu(I16 card_ID, I16 M_No, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_db51_HSL_M_start_sa_arc_zu(I16 card_ID, I16 M_No, F64 Cx, F64 Cy, F64 Ex, F64 Ey, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_db51_HSL_M_start_tr_arc2(I16 card_ID, I16 *AxisArray, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_start_ta_arc2(I16 card_ID, I16 *AxisArray, F64 Cx, F64 Cy, F64 Ex, F64 Ey, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_start_sr_arc2(I16 card_ID, I16 *AxisArray, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_db51_HSL_M_start_sa_arc2(I16 card_ID, I16 *AxisArray, F64 Cx, F64 Cy, F64 Ex, F64 Ey, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
// Home Return Mode
I16 FNTYPE _8154_db51_HSL_M_set_home_config(I16 card_ID, I16 AxisNo, I16 home_mode, I16 org_logic, I16 ez_logic, I16 ez_count, I16 erc_out);
I16 FNTYPE _8154_db51_HSL_M_set_org_offset(I16 card_ID, I16 AxisNo, F64 ORG_ESC_Offset);
I16 FNTYPE _8154_db51_HSL_M_home_move(I16 card_ID, I16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc);
I16 FNTYPE _8154_db51_HSL_M_escape_home(I16 card_ID, I16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc);
I16 FNTYPE _8154_db51_HSL_M_home_search(I16 card_ID, I16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc, F64 ORGOffset);
// Motion Status
I16 FNTYPE _8154_db51_HSL_M_motion_done(I16 card_ID, I16 AxisNo);
I16 FNTYPE _8154_db51_HSL_M_get_abnormal_stop_status(I16 card_ID, I16 AxisNo, I32 *status);
// Motion Interface I/O
I16 FNTYPE _8154_db51_HSL_M_set_alm(I16 card_ID, I16 AxisNo, I16 alm_logic, I16 alm_mode);
I16 FNTYPE _8154_db51_HSL_M_set_el(I16 card_ID, I16 AxisNo, I16 el_mode);
I16 FNTYPE _8154_db51_HSL_M_set_el_logic(I16 card_ID, I16 AxisNo, I16 el_logic);
I16 FNTYPE _8154_db51_HSL_M_set_inp(I16 card_ID, I16 AxisNo, I16 inp_enable, I16 inp_logic);
I16 FNTYPE _8154_db51_HSL_M_set_erc(I16 card_ID, I16 AxisNo, I16 erc_logic, I16 erc_on_time);
I16 FNTYPE _8154_db51_HSL_M_set_servo(I16 card_ID, I16 AxisNo, I16 on_off);
I16 FNTYPE _8154_db51_HSL_M_set_sd(I16 card_ID, I16 AxisNo, I16 enable, I16 sd_logic, I16 sd_latch, I16 sd_mode);
// Motion I/O Monitoring
I16 FNTYPE _8154_db51_HSL_M_get_io_status(I16 card_ID, I16 AxisNo, U16 *io_sts);
// Position Control and Counters
I16 FNTYPE _8154_db51_HSL_M_get_position(I16 card_ID, I16 AxisNo, F64 *pos);
I16 FNTYPE _8154_db51_HSL_M_set_position(I16 card_ID, I16 AxisNo, F64 pos);
I16 FNTYPE _8154_db51_HSL_M_get_command(I16 card_ID, I16 AxisNo, I32 *cmd);
I16 FNTYPE _8154_db51_HSL_M_set_command(I16 card_ID, I16 AxisNo, I32 cmd);
I16 FNTYPE _8154_db51_HSL_M_get_error_counter(I16 card_ID, I16 AxisNo, I16 *error_counter);
I16 FNTYPE _8154_db51_HSL_M_reset_error_counter(I16 card_ID, I16 AxisNo);
I16 FNTYPE _8154_db51_HSL_M_get_general_counter(I16 card_ID, I16 AxisNo, F64 *CntValue);
I16 FNTYPE _8154_db51_HSL_M_set_general_counter(I16 card_ID, I16 AxisNo, I16 CntSrc, F64 CntValue);
I16 FNTYPE _8154_db51_HSL_M_get_target_pos(I16 card_ID, I16 AxisNo, F64 *pos);
I16 FNTYPE _8154_db51_HSL_M_reset_target_pos(I16 card_ID, I16 AxisNo, F64 pos);
I16 FNTYPE _8154_db51_HSL_M_get_rest_command(I16 card_ID, I16 AxisNo, I32 *rest_command);
I16 FNTYPE _8154_db51_HSL_M_check_rdp(I16 card_ID, I16 AxisNo, I32 *rdp_command);
// Position Compare and Latch
I16 FNTYPE _8154_db51_HSL_M_set_ltc_logic(I16 card_ID, I16 AxisNo, I16 ltc_logic);
I16 FNTYPE _8154_db51_HSL_M_get_latch_data(I16 card_ID, I16 AxisNo, I16 LatchNo, F64 *Pos);
I16 FNTYPE _8154_db51_HSL_M_set_soft_limit(I16 card_ID, I16 AxisNo, I32 PLimit, I32 NLimit);
I16 FNTYPE _8154_db51_HSL_M_enable_soft_limit(I16 card_ID, I16 AxisNo, I16 Action);
I16 FNTYPE _8154_db51_HSL_M_disable_soft_limit(I16 card_ID, I16 AxisNo);
I16 FNTYPE _8154_db51_HSL_M_set_error_counter_check(I16 card_ID, I16 AxisNo, I16 Tolerance, I16 On_Off);
I16 FNTYPE _8154_db51_HSL_M_set_general_comparator(I16 card_ID, I16 AxisNo, I16 CmpSrc, I16 CmpMethod, I16 CmpAction, F64 Data);