PCI8154/Library/Include/pci_8154.bas

Declare Function B_8154_db51_HSL_M_start_tr_arc_xy Lib "8154.dll" Alias "_8154_db51_HSL_M_start_tr_arc_xy" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_ta_arc_xy Lib "8154.dll" Alias "_8154_db51_HSL_M_start_ta_arc_xy" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_sr_arc_xy Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sr_arc_xy" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_sa_arc_xy Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sa_arc_xy" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_tr_arc_zu Lib "8154.dll" Alias "_8154_db51_HSL_M_start_tr_arc_zu" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_ta_arc_zu Lib "8154.dll" Alias "_8154_db51_HSL_M_start_ta_arc_zu" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_sr_arc_zu Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sr_arc_zu" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_sa_arc_zu Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sa_arc_zu" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_tr_arc2 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_tr_arc2" (ByVal card_ID As Integer, AxisArray As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_ta_arc2 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_ta_arc2" (ByVal card_ID As Integer, AxisArray As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_sr_arc2 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sr_arc2" (ByVal card_ID As Integer, AxisArray As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_sa_arc2 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sa_arc2" (ByVal card_ID As Integer, AxisArray As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
'
'  Home Return Mode
Declare Function B_8154_db51_HSL_M_set_home_config Lib "8154.dll" Alias "_8154_db51_HSL_M_set_home_config" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal home_mode As Integer, ByVal org_logic As Integer, ByVal ez_logic As Integer, ByVal ez_count As Integer, ByVal erc_out As Integer) As Integer
Declare Function B_8154_db51_HSL_M_set_org_offset Lib "8154.dll" Alias "_8154_db51_HSL_M_set_org_offset" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal ORG_ESC_Offset As Double) As Integer
Declare Function B_8154_db51_HSL_M_home_move Lib "8154.dll" Alias "_8154_db51_HSL_M_home_move" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Integer
Declare Function B_8154_db51_HSL_M_escape_home Lib "8154.dll" Alias "_8154_db51_HSL_M_escape_home" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Integer
Declare Function B_8154_db51_HSL_M_home_search Lib "8154.dll" Alias "_8154_db51_HSL_M_home_search" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal ORGOffset As Double) As Integer
'
'  Motion Status
Declare Function B_8154_db51_HSL_M_motion_done Lib "8154.dll" Alias "_8154_db51_HSL_M_motion_done" (ByVal card_ID As Integer, ByVal AxisNo As Integer) As Integer
Declare Function B_8154_db51_HSL_M_get_abnormal_stop_status Lib "8154.dll" Alias "_8154_db51_HSL_M_get_abnormal_stop_status" (ByVal card_ID As Integer, ByVal AxisNo As Integer, status As Long) As Integer
'
'  Motion Interface I/O
Declare Function B_8154_db51_HSL_M_set_alm Lib "8154.dll" Alias "_8154_db51_HSL_M_set_alm" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal alm_logic As Integer, ByVal alm_mode As Integer) As Integer
Declare Function B_8154_db51_HSL_M_set_el Lib "8154.dll" Alias "_8154_db51_HSL_M_set_el" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal el_mode As Integer) As Integer
Declare Function B_8154_db51_HSL_M_set_el_logic Lib "8154.dll" Alias "_8154_db51_HSL_M_set_el_logic" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal el_logic As Integer) As Integer
Declare Function B_8154_db51_HSL_M_set_inp Lib "8154.dll" Alias "_8154_db51_HSL_M_set_inp" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal inp_enable As Integer, ByVal inp_logic As Integer) As Integer
Declare Function B_8154_db51_HSL_M_set_erc Lib "8154.dll" Alias "_8154_db51_HSL_M_set_erc" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal erc_logic As Integer, ByVal erc_on_time As Integer) As Integer
Declare Function B_8154_db51_HSL_M_set_servo Lib "8154.dll" Alias "_8154_db51_HSL_M_set_servo" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal on_off As Integer) As Integer
Declare Function B_8154_db51_HSL_M_set_sd Lib "8154.dll" Alias "_8154_db51_HSL_M_set_sd" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal enable As Integer, ByVal sd_logic As Integer, ByVal sd_latch As Integer, ByVal sd_mode As Integer) As Integer
'
'  Motion I/O Monitoring
Declare Function B_8154_db51_HSL_M_get_io_status Lib "8154.dll" Alias "_8154_db51_HSL_M_get_io_status" (ByVal card_ID As Integer, ByVal AxisNo As Integer, io_sts As Integer) As Integer
'
'  Position Control and Counters
Declare Function B_8154_db51_HSL_M_get_position Lib "8154.dll" Alias "_8154_db51_HSL_M_get_position" (ByVal card_ID As Integer, ByVal AxisNo As Integer, Pos As Double) As Integer
Declare Function B_8154_db51_HSL_M_set_position Lib "8154.dll" Alias "_8154_db51_HSL_M_set_position" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal Pos As Double) As Integer
Declare Function B_8154_db51_HSL_M_get_command Lib "8154.dll" Alias "_8154_db51_HSL_M_get_command" (ByVal card_ID As Integer, ByVal AxisNo As Integer, Cmd As Long) As Integer
Declare Function B_8154_db51_HSL_M_set_command Lib "8154.dll" Alias "_8154_db51_HSL_M_set_command" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal Cmd As Long) As Integer
Declare Function B_8154_db51_HSL_M_get_error_counter Lib "8154.dll" Alias "_8154_db51_HSL_M_get_error_counter" (ByVal card_ID As Integer, ByVal AxisNo As Integer, error_counter As Integer) As Integer
Declare Function B_8154_db51_HSL_M_reset_error_counter Lib "8154.dll" Alias "_8154_db51_HSL_M_reset_error_counter" (ByVal card_ID As Integer, ByVal AxisNo As Integer) As Integer
Declare Function B_8154_db51_HSL_M_get_general_counter Lib "8154.dll" Alias "_8154_db51_HSL_M_get_general_counter" (ByVal card_ID As Integer, ByVal AxisNo As Integer, CntValue As Double) As Integer
Declare Function B_8154_db51_HSL_M_set_general_counter Lib "8154.dll" Alias "_8154_db51_HSL_M_set_general_counter" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal CntSrc As Integer, ByVal CntValue As Double) As Integer
Declare Function B_8154_db51_HSL_M_get_target_pos Lib "8154.dll" Alias "_8154_db51_HSL_M_get_target_pos" (ByVal card_ID As Integer, ByVal AxisNo As Integer, Pos As Double) As Integer
Declare Function B_8154_db51_HSL_M_reset_target_pos Lib "8154.dll" Alias "_8154_db51_HSL_M_reset_target_pos" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal Pos As Double) As Integer
Declare Function B_8154_db51_HSL_M_get_rest_command Lib "8154.dll" Alias "_8154_db51_HSL_M_get_rest_command" (ByVal card_ID As Integer, ByVal AxisNo As Integer, rest_command As Long) As Integer
Declare Function B_8154_db51_HSL_M_check_rdp Lib "8154.dll" Alias "_8154_db51_HSL_M_check_rdp" (ByVal card_ID As Integer, ByVal AxisNo As Integer, rdp_command As Long) As Integer
'
'  Position Compare and Latch
Declare Function B_8154_db51_HSL_M_set_ltc_logic Lib "8154.dll" Alias "_8154_db51_HSL_M_set_ltc_logic" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal ltc_logic As Integer) As Integer
Declare Function B_8154_db51_HSL_M_get_latch_data Lib "8154.dll" Alias "_8154_db51_HSL_M_get_latch_data" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal LatchNo As Integer, Pos As Double) As Integer
Declare Function B_8154_db51_HSL_M_set_soft_limit Lib "8154.dll" Alias "_8154_db51_HSL_M_set_soft_limit" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal PLimit As Long, ByVal NLimit As Long) As Integer
Declare Function B_8154_db51_HSL_M_enable_soft_limit Lib "8154.dll" Alias "_8154_db51_HSL_M_enable_soft_limit" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal Action As Integer) As Integer
Declare Function B_8154_db51_HSL_M_disable_soft_limit Lib "8154.dll" Alias "_8154_db51_HSL_M_disable_soft_limit" (ByVal card_ID As Integer, ByVal AxisNo As Integer) As Integer
Declare Function B_8154_db51_HSL_M_set_error_counter_check Lib "8154.dll" Alias "_8154_db51_HSL_M_set_error_counter_check" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal Tolerance As Integer, ByVal on_off As Integer) As Integer
Declare Function B_8154_db51_HSL_M_set_general_comparator Lib "8154.dll" Alias "_8154_db51_HSL_M_set_general_comparator" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal CmpSrc As Integer, ByVal CmpMethod As Integer, ByVal CmpAction As Integer, ByVal Data As Double) As Integer
